--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.16.2",
-    "@types/node-telegram-bot-api": "^0.64.7",
     "axios": "^1.7.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "node-telegram-bot-api": "^0.66.0",
+    "grammy": "^1.27.0",
     "prisma": "^5.16.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
